[gd_scene load_steps=7 format=2]

[ext_resource path="res://CreateAbility.gd" type="Script" id=1]
[ext_resource path="res://abilityPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Introdile.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/introdile.tres" type="DynamicFont" id=4]
[ext_resource path="res://Prefabs/fontILabel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=3]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="CreateAbility" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="abilityPanel" parent="." index="0" instance=ExtResource( 2 )]

[node name="abilityEditPanel" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 261.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="abilityVBox" type="VBoxContainer" parent="abilityEditPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="abilityNameEdit" type="LineEdit" parent="abilityEditPanel/abilityVBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Ability Name"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "custom_fonts" ]

[node name="abilityIconEdit" type="LineEdit" parent="abilityEditPanel/abilityVBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Ability Icon"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "custom_fonts" ]

[node name="abilityDescEdit" type="TextEdit" parent="abilityEditPanel/abilityVBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 4 )
text = "Add the ability's description here. You can use [color=red]bbcode[/color] here too!"
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="abilityGridBox" type="GridContainer" parent="abilityEditPanel/abilityVBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 267.0
margin_right = 1024.0
margin_bottom = 315.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 6

[node name="targetsLabel" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="0" instance=ExtResource( 5 )]

margin_top = 3.0
margin_right = 57.0
margin_bottom = 16.0
text = "Targets:"

[node name="abilityTargetsChoice" type="OptionButton" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_right = 135.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1

[node name="typesLabel" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="2" instance=ExtResource( 5 )]

margin_left = 139.0
margin_top = 3.0
margin_right = 182.0
margin_bottom = 16.0
text = "Types:"

[node name="abilityTypeChoice" type="OptionButton" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 186.0
margin_right = 225.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1

[node name="elementLabel" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="4" instance=ExtResource( 5 )]

margin_left = 229.0
margin_top = 3.0
margin_right = 285.0
margin_bottom = 16.0
text = "Element:"

[node name="abilityElementChoice" type="OptionButton" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_right = 328.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1

[node name="powerLabel" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="6" instance=ExtResource( 5 )]

margin_top = 29.0
margin_right = 57.0
margin_bottom = 42.0
text = "Power:"

[node name="abilityPowerEdit" type="SpinBox" parent="abilityEditPanel/abilityVBox/abilityGridBox" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_top = 24.0
margin_right = 135.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 2500.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "%"
_sections_unfolded = [ "Hint" ]

[node name="addAbilityButton" type="Button" parent="abilityEditPanel/abilityVBox" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 319.0
margin_right = 1024.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Ability"
flat = false
align = 1

[connection signal="pressed" from="abilityEditPanel/abilityVBox/addAbilityButton" to="." method="_on_addAbilityButton_pressed"]


